# ColorVisionSimulation-benchmark

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  cvs_bench.cpp
lib/: CMakeLists.txt  cvs.h  daltonlens.cpp  daltonlens.h  daltonlens_cl.cpp  daltonlens_cl.h  daltonlens_omp.cpp  daltonlens_omp.h  kernel.cl
plot/: benchmark.json  plot_benchmark.ipynb
test/: CMakeLists.txt  cvs_test.cpp  kernel_build.cpp
